<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="false">

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ScrollViewSize">

    <ImageView
        android:id="@+id/bg_top"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/bg_up"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/pattern"
            android:contentDescription="@string/todo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="-190dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/ruqyah_an_nahdliyah"
            android:textColor="#fff"
            android:textSize="20sp"
            tools:ignore="RtlSymmetry" />

        <RelativeLayout
            android:id="@+id/rl_search"
            android:onClick="searchKlik"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/bg_search">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="100dp"
                android:layout_marginBottom="0dp"
                android:src="@drawable/ic_action_name"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="40dp"
                android:layout_marginTop="0dp"
                android:gravity="center"
                android:layout_marginBottom="0dp"
                android:layout_marginEnd="100dp"
                android:fontFamily="@font/montserrat_medium"
                android:hint="@string/cari_praktisi_terdekat"
                android:textColorHint="#E0E0E0" />


        </RelativeLayout>

        <com.denzcoskun.imageslider.ImageSlider
            android:id="@+id/slider"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            app:auto_cycle="true"
            app:corner_radius="20"
            app:delay="0"
            app:error_image="@drawable/slider"
            app:period="2000"
            app:placeholder="@drawable/slider">

        </com.denzcoskun.imageslider.ImageSlider>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll2"
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_height="70dp"
        android:weightSum="4"
        android:background="@drawable/bg_middle"
        app:layout_constraintTop_toBottomOf="@+id/ll1"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/silaturahmi"
            android:onClick="silaturahmiKlik"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@drawable/salam"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/silatourahmi"
                android:textColor="#ffff"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/website"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical"
            android:onClick="websiteKlik"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@drawable/website"
                android:contentDescription="@string/todo" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="#ffff"
                android:textSize="10sp"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:text="@string/website"
                tools:ignore="SmallSp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical"
            android:onClick="EmailKlik"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@drawable/email"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/email"
                android:textColor="#ffff"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/callcenter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical"
            android:onClick="CallcenterKlik"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@drawable/callcenter"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/callcenter"
                android:textColor="#ffff"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/layanankami"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ll2"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/layanan_kami"
        android:fontFamily="@font/montserrat_semibold"
        android:textSize="18sp"
        android:textColor="#4CAD4E"/>

    <LinearLayout
        android:id="@+id/ll3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/layanankami"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:weightSum="4"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/jra"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical"
            android:onClick="jraKlik"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/jra"
                android:contentDescription="@string/todo" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/diagnosis"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical"
            android:onClick="diagnosisKlik"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/diagnosa"
                android:contentDescription="@string/todo" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/ruqyah"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical"
            android:onClick="ruqyahKlik"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ruqyah_mandiri"
                android:contentDescription="@string/todo" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/alquran"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical"
            android:onClick="alquranKlik"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/al_quran"
                android:contentDescription="@string/todo" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/ll3"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:weightSum="4"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/kitab"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical"
            android:onClick="kitabKlik"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/kitab"
                android:contentDescription="@string/todo" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/ayat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical"
            android:onClick="ayatKlik"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ayat_ruqyah"
                android:contentDescription="@string/todo" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/dzikir"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical"
            android:onClick="dzikirKlik"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/dzikir"
                android:contentDescription="@string/todo" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/ziarah"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical"
            android:onClick="ziarahMakamKlik"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ziarah_makam"
                android:contentDescription="@string/todo" />

        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/ll4"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:weightSum="4"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/thibbun"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical"
            android:onClick="ThibbunKlik"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/thibbun_nabawi"
                android:contentDescription="@string/todo" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/bekam"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical"
            android:onClick="BekamKlik"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/bekam"
                android:contentDescription="@string/todo" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/totok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical"
            android:onClick="TotokKlik"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/totok"
                android:contentDescription="@string/todo" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/gurah"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical"
            android:onClick="GurahKlik"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/gurah"
                android:contentDescription="@string/todo" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        app:layout_constraintTop_toBottomOf="@id/ll5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="UselessLeaf" />





</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>